fix dark mode styling issues

--- a/src/css/locations.less
+++ b/src/css/locations.less
@@ -35,7 +35,7 @@
 				width: 100%;
 				/* 32px - 40px */
 				margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
-				color: var(--bodyTextColorWhite);
+				// color: var(--bodyTextColorWhite);
 				position: relative;
 			}
 			
